# greyhound

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.py  test_model.ipynb  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: README.md
container/: greyhound.def  longboi.def
docs/: README.md
scripts/: README.md  setup_dev.sh  train_flashzoi.py
src/greyhound/: __init__.py
src/greyhound/data/: __init__.py  datasets.py
src/greyhound/model/: __init__.py  attributions.py  callbacks.py  locon.py  lora.py  losses.py  metrics.py  model.py
tests/: __init__.py  conftest.py
